# aoc25

./: CMakeLists.txt
include/: common.hpp
src/common/: common.cpp
src/day2/: day2.cpp
src/day3/: day3.cpp
src/day4/: day4.cpp
src/day5/: day5.cpp
src/day6/: day6.cpp
src/day7/: day7.cpp
